@@ -38,6 +38,7 @@ version ? (????-??-??):
   - added 'Data limit' field in tariff's data (alec)
   - function GetMACs() returns only valid addresses (alec)
   - balanceadd: fixed saved value in db while type is liability (chilek)
+  - customerinfo: see all invoices added (chilek)
 
 version 1.9.4 Mot (2006-12-30):
 
